[package]
name = "datafusion-functions-json"
version = "0.44.2"
edition = "2021"
description = "JSON functions for DataFusion"
readme = "README.md"
license = "Apache-2.0"
keywords = ["datafusion", "JSON", "SQL"]
categories = ["database-implementations", "parsing"]
repository = "https://github.com/datafusion-contrib/datafusion-functions-json/"
rust-version = "1.80.1"

[dependencies]
datafusion = { git="https://github.com/Embucket/datafusion.git", rev = "a4c5f3f065b551afdf845000e3630012af27dc17", default-features = false }
jiter = "0.8"
paste = "1"
log = "0.4"

[dev-dependencies]
datafusion = { git="https://github.com/Embucket/datafusion.git", rev = "a4c5f3f065b551afdf845000e3630012af27dc17", default-features = false, features = ["nested_expressions"] }
codspeed-criterion-compat = "2.6"
criterion = "0.5.1"
clap = "4"
tokio = { version = "1.38", features = ["full"] }

[lints.clippy]
dbg_macro = "deny"
print_stdout = "deny"

# in general, we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce (for now)
pedantic = { level = "deny", priority = -1 }

[[bench]]
name = "main"
harness = false
